Fix ArcAppModelBuilderTest

Several tests in this suite were flaky. This change:

* Sets up a real I/O thread for the ExtensionsService and
  sets the profile mapping in case the garbage collector
  kicks in.
* Does a better job of waiting for the icons to be loaded.
* Uniformly disables safe icon decoding since it introduces
  extra thread hops that are difficult to synchronize for.

BUG=627853
BUG=624446
TEST=./unit_tests --gtest-filter=ArcAppModelBuilderTest*
TEST=for each test:
     ./unit_tests --gtest-filter=${t} --single-process-tests

Review-Url: https://codereview.chromium.org/2150583002
Cr-Commit-Position: refs/heads/master@{#405643}

Former-commit-id: 4303e815b33c5d970e210ca9edd2b6bafedc8ad3